--- a/CordovaApp/platforms/android/res/xml/config.xml
+++ b/CordovaApp/platforms/android/res/xml/config.xml
@@ -7,6 +7,9 @@
     <feature name="Vibration">
         <param name="android-package" value="org.apache.cordova.vibration.Vibration" />
     </feature>
+    <feature name="BLE">
+        <param name="android-package" value="com.megster.cordova.ble.central.BLECentralPlugin" />
+    </feature>
     <name>DemoApp</name>
     <description>
         A sample Apache Cordova application that responds to the deviceready event.
